-----
2019-11-06  Masa Sakano
  * PlainText::Util (`plain_text/util.rb`)
    * All the methods are now private.
    * New dedicated test code file: `lib/plain_text/util.rb`
  * PlainText::Part (`plain_text/part.rb`)
    * Two new public methods `merge_para!` and `merge_para_if`
  * head.rb, tail.rb (hence `plain_text.rb`)
    * Fixed a critical bug in the null case with a Regexp option.

-----
(Version: 0.4)
2019-10-29  Masa Sakano
  * Changed the names in PlainText::Part.(map|each)_boundaries_* to boundary, and similarly parts to part

-----
(Version: 0.3)
2019-10-27  Masa Sakano
  * Added 3 executables textclean, head.rb, tail.rb in bin/ together with their tests
  * lib/plaintext.rb refactoring
    * Added a new constant `DEF_METHOD_OPTS`
  * bin/countchar refactoring

-----
(Version: 0.3)
2019-10-27  Masa Sakano
  * Added 3 executables textclean, head.rb, tail.rb in bin/ together with their tests
  * lib/plaintext.rb refactoring
    * Added a new constant `DEF_METHOD_OPTS`
  * bin/countchar refactoring

-----
(Version: 0.2)
2019-10-27  Masa Sakano
  * Plain Text.clean_text
    * Option name and default changed from `firstsps_style=:truncate` to `firstlbs_style=:delete`
    * Default of Option `linehead_style` changed from :delete to : none
    * Option `sps_style` now ignores the line head and tail in a new private class method `clean_text_sps!`
    * Fixed bugs, including the one for Option choice `linetail_style: :markdown`
  * New constant ParseRule::RuleEachLineStrip

-----
(Version: 0.2)
2019-10-27  Masa Sakano
  * Plain Text.clean_text
    * Option name and default changed from `firstsps_style=:truncate` to `firstlbs_style=:delete`
    * Default of Option `linehead_style` changed from :delete to : none
    * Option `sps_style` now ignores the line head and tail in a new private class method `clean_text_sps!`
    * Fixed bugs, including the one for Option choice `linetail_style: :markdown`
  * New constant ParseRule::RuleEachLineStrip

-----
(Version: 0.1)